# python-packaging-ch

./: pyproject.toml
.github/workflows/: test_and_deploy.yml
python_packaging_ch/: maths.py
tests/test_unit/: test_maths.py
