[project]
name = "python-packaging-ch"
authors = [{name = "Chang Huan Lo", email= "changhuan.lo@ucl.ac.uk"}]
description = "Example of how to package Python projects"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas",
]

# license
license = {text = "BSD-3-Clause"}

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]



